--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col">
-						<p class="text-white mt-5 mb-5">Welcome back, <b th:text="${session.staff.user.uname}" th:if="${session.staff!=null}"></b></p>
+						<p class="text-white mt-5 mb-5">欢迎, <b th:text="${session.staff.user.uname}" th:if="${session.staff!=null}"></b></p>
 					</div>
 				</div>
 				<!-- row -->
