--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,14 +18,14 @@
           <div class="tm-bg-primary-dark tm-block tm-block-h-auto">
             <div class="row">
               <div class="col-12 text-center">
-                <h2 class="tm-block-title mb-4">Welcome to Dashboard, Login</h2>
+                <h2 class="tm-block-title mb-4">欢迎来到登录页面</h2>
               </div>
             </div>
             <div class="row mt-2">
               <div class="col-12">
                 <form action="/login/loginQuery" method="post" class="tm-login-form">
                   <div class="form-group">
-                    <label for="username">Username</label>
+                    <label for="username">用户名</label>
                     <input
                       name="uname"
                       type="text"
@@ -36,7 +36,7 @@
                     />
                   </div>
                   <div class="form-group mt-3">
-                    <label for="password">Password</label>
+                    <label for="password">密码</label>
                     <input
                       name="upassword"
                       type="password"
@@ -51,11 +51,11 @@
                       type="submit"
                       class="btn btn-primary btn-block text-uppercase"
                     >
-                      Login
+                      	登录
                     </button>
                   </div>
                   <button class="mt-5 btn btn-primary btn-block text-uppercase">
-                    Forgot your password?
+                    	忘记密码
                   </button>
                 </form>
               </div>
