--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -47,7 +47,7 @@
             </div>
             <!-- table container -->
             <a
-              th:href="@{toinsert}"
+              th:href="@{/xjb_areasController/toinsert}"
               class="btn btn-primary btn-block text-uppercase mb-3">新增基地</a>
             <button class="btn btn-primary btn-block text-uppercase">
             	删除基地
