--- a/src/main/resources/templates/pagehome.html
+++ b/src/main/resources/templates/pagehome.html
@@ -183,18 +183,18 @@
 							<!-- // SITE LOGO -->
 							<!-- SITE NAVIGATION MENU -->
 							<nav id="site-menu" role="navigation">
-								<ul class="main-menu hidden-sm hidden-xs">
+								<<ul class="main-menu hidden-sm hidden-xs">
 									<li class="active">
 										<a th:href="@{/customer/topagehome}">首页</a>
 									</li>
 									<li>
-										<a href="productList.html">活动</a>
+										<a th:href="@{/xjb_projectController/query_Qt}">项目活动</a>
 									</li>
 									<li>
 										<a th:href="@{/menu/toquerymenu1}">餐饮</a>
 									</li>
 									<li>
-										<a href="hotel.html">住宿</a>
+										<a th:href="@{/room/toqueryqtroom}">住宿</a>
 									</li>
 
 									<li>
