--- a/src/main/resources/templates/insert_project.html
+++ b/src/main/resources/templates/insert_project.html
@@ -173,7 +173,7 @@
 		</div>
 	</div>
 	<div id="jd_tc"
-		style="width: 520px; height: 208px; border: 1px solid #466675;; background: white; filter: alpha(opacity : 80); opacity: 0.9; -moz-opacity: 0.2; -khtml-opacity: 0.5; position: relative; bottom: 320px; left: 870px; overflow-y: scroll; overflow-x: scroll; display: none;">
+		style="width: 520px; height: 208px; border: 1px solid #466675;background: white; filter: alpha(opacity : 80); opacity: 0.9; -moz-opacity: 0.2; -khtml-opacity: 0.5; position: relative; bottom: 320px; left: 770px; overflow-y: scroll; overflow-x: scroll; display: none;">
 		<div style="background: #466675;">
 			<input type="text" name="anmae" placeholder="基地名称" class="form-group">
 			<input type="text" name="pistion" placeholder="基地位置"
@@ -204,7 +204,7 @@
 	</div>
 	
 	<div id="zw_tc"
-		style="width: 520px; height: 208px; border: 1px solid #466675;; background: white; filter: alpha(opacity : 80); opacity: 0.9; -moz-opacity: 0.2; -khtml-opacity: 0.5; position: relative; bottom: 320px; left: 0px; overflow-y: scroll; overflow-x: scroll; display: none;">
+		style="width: 520px; height: 208px; border: 1px solid #466675;; background: white; filter: alpha(opacity : 80); opacity: 0.9; -moz-opacity: 0.2; -khtml-opacity: 0.5; position: relative; bottom: 320px; left: 770px; overflow-y: scroll; overflow-x: scroll; display: none;">
 		<div style="background: #466675;">
 			<table class="table">
 				<thead>
