--- a/src/main/resources/templates/mode.html
+++ b/src/main/resources/templates/mode.html
@@ -31,7 +31,7 @@
 					</div>
 				</div>
 			</nav>
-			<iframe scrolling="no" id="main" name="main" frameborder="0"  style="min-height:600px;width:100%;height:100%;" src="/login/index"></iframe>
+			<iframe id="main" name="main" frameborder="0"  style="min-height:600px;width:100%;height:100%;" src="/login/index"></iframe>
 			<footer class="tm-footer row tm-mt-small">
 				<div class="col-12 font-weight-light">
 					<p class="text-center text-white mb-0 px-4 small">
