--- a/src/main/resources/templates/NewMainOrder.html
+++ b/src/main/resources/templates/NewMainOrder.html
@@ -374,7 +374,7 @@
 						}
 					})
 				})
-				divh=$("<div class='dingdanhead'><h4><a data-toggle='collase'  href='#checkout-collapses5'><span class='step'>1</span><span>个人订单</span></a></h4></div>");
+				divh=$("<div class='dingdanhead'><h4><a data-toggle='collase'  href='#checkout-collapses5'><span class='step'>1</span><span>我的订单</span></a></h4></div>");
 				divh1=$("<div class='content col-md-12 collapsed' id='checkout-collapses5'></div>");
 			
 				$(divh1).append(div2).append(div3).append(div4);
