--- a/src/main/resources/templates/pagehome.html
+++ b/src/main/resources/templates/pagehome.html
@@ -183,7 +183,7 @@
 							<!-- // SITE LOGO -->
 							<!-- SITE NAVIGATION MENU -->
 							<nav id="site-menu" role="navigation">
-								<<ul class="main-menu hidden-sm hidden-xs">
+								<ul class="main-menu hidden-sm hidden-xs">
 									<li class="active">
 										<a th:href="@{/customer/topagehome}">首页</a>
 									</li>
