--- a/src/main/resources/templates/NewMainOrder.html
+++ b/src/main/resources/templates/NewMainOrder.html
@@ -121,7 +121,9 @@
 		}
 		 .table {
 		    width: 100%;
-		   	font-size:100%; 
+		   	font-size:100%;
+		   	max-height: 450px;
+			overflow-y: auto; 
 		} 
 		.table td{
 			height:57px;
@@ -131,11 +133,46 @@
 		    padding: 8px;
 		     line-height:0;
 		     vertical-align: middle;
-		    border-top: 1px solid #ddd;
+		    border-top: 1px soid #ddd;
+		}
+		.table>tbody{
+			width: 100%;
+			max-height: 150px;
+			overflow-y: auto;
+		}
+		.tm-block {
+			 background:#E2E2E2; 
+		}
+		::-webkit-scrollbar-track {
+    	 background: #e2e2e2; 
 		}
 	</style>
 <body>
-	<h4>订单管理</h4>
+		<div class="panel-group checkout" id="checkout-collapse">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#checkout-collapse"
+							href="#checkout-collapse5"> <span class="step">03</span>
+							订单查询
+						</a>
+					</h4>
+				</div>
+				<div id="checkout-collapse5" class="panel-collapse in">
+					<table >
+						<thead>
+							<tr>
+								<th scope="col">订单号</th>
+								<th scope="col">订单状态</th>
+								<th scope="col">订单生成时间</th>
+								<th scope="col">客户姓名</th>
+								<th scope="col">&nbsp;</th>
+							</tr>
+						</thead>
+					</table>
+				</div>
+			</div>
+		</div>
 	 <div class="tm-bg-primary-dark tm-block tm-block-taller tm-block-scroll" style="width: 100%;margin-bottom: 20;">
 		<table class="table">
 			<thead>
@@ -218,9 +255,10 @@
 	</div>
 		
 </body>
+		 <script type="text/javascript" th:src="@{/js/jquery-3.3.1.min.js}"></script>
 		<script th:src="@{/js1/minified.js}"></script>
 		<script th:src="@{/js1/products.js}"></script>
-		 <script type="text/javascript" th:src="@{/js/jquery-3.3.1.min.js}"></script> 
+		 
 
 		<script type="text/javascript">
 			//判断 是否已显示 如果显示 则取消显示      .panel-collapse in  显示
