--- a/src/main/resources/templates/single1.html
+++ b/src/main/resources/templates/single1.html
@@ -8,10 +8,8 @@
 <script th:src="@{/js1/bootstrap.min.js}"></script>
 <link th:href="@{/css1/style1.css}" rel='stylesheet' type='text/css' />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-</script>
-<style>
-</style>
+
+
 <link href='http://fonts.googleapis.com/css?family=Exo+2:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
 				<!-- Include the Etalage files -->
 					<link rel="stylesheet" th:href="@{/css1/etalage.css}">
@@ -37,6 +35,13 @@
 					});
 				</script>
 </head>
+
+<style>
+	.main{
+		background-color:#F2F2F2;
+		
+	}
+</style>
 <body>
 	
 	
