--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -224,7 +224,7 @@
 														<table>
 															<tr>
 																<th>价钱:</th>
-																<td th:text="${room.price}"></td>
+																<td th:text="'￥'+${room.price}"></td>
 															</tr>
 															<tr>
 																<th>合同类型：</th>
@@ -294,7 +294,7 @@
 															<!-- /.title -->
 															<div class="location"><span th:if="${oitem.rooms.typeid==1}" th:text="单人间"></span><span th:if="${oitem.rooms.typeid==2}" th:text="双人间"></span><span th:if="${oitem.rooms.typeid==3}" th:text="总统套房"></span></div>
 															<!-- /.location -->
-															<div class="price" th:text="'$'+${oitem.rooms.price}" style="font-size: 20px ;color: red;"></div>
+															<div class="price" th:text="'￥'+${oitem.rooms.price}" style="font-size: 20px ;color: red;"></div>
 															<!-- /.price -->
 														</div>
 														<!-- /.wrapper -->
