--- a/src/main/resources/templates/index1.html
+++ b/src/main/resources/templates/index1.html
@@ -245,7 +245,7 @@
 														</div>
 														<!-- /.content -->
 
-														<div class="price" th:text="${'$'+ritem.price}" style="color: red;"></div>
+														<div class="price" th:text="${'￥'+ritem.price}" style="color: red;"></div>
 														<!-- /.price -->
 														<div class="reduced">总统套房 </div>
 														<!-- /.reduced -->
@@ -311,7 +311,7 @@
 															<!-- /.title -->
 															<div class="location"><span th:if="${oitem.rooms.typeid==1}" th:text="单人间"></span><span th:if="${oitem.rooms.typeid==2}" th:text="双人间"></span><span th:if="${oitem.rooms.typeid==3}" th:text="总统套房"></span></div>
 															<!-- /.location -->
-															<div class="price" th:text="'$'+${oitem.rooms.price}" style="font-size: 20px ;color: red;"></div>
+															<div class="price" th:text="'￥'+${oitem.rooms.price}" style="font-size: 20px ;color: red;"></div>
 															<!-- /.price -->
 														</div>
 														<!-- /.wrapper -->
@@ -347,7 +347,7 @@
 													<h3><a href="detail.html" th:text="${item.rname}"></a></h3>
 												</div>
 												<!-- /.title -->
-												<div class="location" th:text="'$'+${item.price}" style="font-size: 20px ;color: red;"></div>
+												<div class="location" th:text="'￥'+${item.price}" style="font-size: 20px ;color: red;"></div>
 												<!-- /.location-->
 												<div class="price">€2 300 000</div>
 												<!-- .price -->
