--- a/src/main/resources/templates/menu1.html
+++ b/src/main/resources/templates/menu1.html
@@ -265,7 +265,7 @@
 					<div class="strip-line"></div>
 				</div>
 				<div class="our-menu-grids">
-					<span>实惠套餐</span>
+					<span style="font-size: 18px;"><a href="javascript:void(0)">实惠套餐</a></span>
 					<div class="order-top" th:each="bitem : ${blist}">
 						<li class="im-g">
 							<a th:href="@{/menu/toquerymenu1Byid(id=${bitem.id},type='4')}"><img th:if="${bitem.image!=null}" class="imgs" th:src="${bitem.image.url}" width="273px" height="169px"/></a>
@@ -287,7 +287,7 @@
 				
 				
 				<div class="our-menu-grids" th:each="item : ${list}">
-					<span th:text="${item.tname}"></span>
+					<span style="font-size: 18px;"><a href="javascript:void(0)" th:text="${item.tname}"></a></span>
 					<div class="order-top" th:each="items : ${item.list}">
 						<li class="im-g">
 							<a th:href="@{/menu/toquerymenu1Byid(id=${items.id},type='2')}"><img th:if="${items.image!=null}" class="imgs" th:src="${items.image.url}" width="273" height="169"/></a>
