--- a/src/main/resources/templates/insert_base.html
+++ b/src/main/resources/templates/insert_base.html
@@ -12,15 +12,9 @@
   <link rel="stylesheet"  th:href="@{/css/bootstrap.min.css}" />
 <link rel="stylesheet"  th:href="@{/css/templatemo-style.css}">
 <style>
-/*#ty_tc_top span{
-    		margin-left: 50px;
-    		margin-top: 50px;
-    	}
-    	#ty_tc_top input{
-    		width: 15px;
-    		height: 15px;
-    		margin-left: 10px;
-    	}*/
+.collapse:not(.show){
+	display:block;
+}
 #xm_tc span {
 	margin-left: 20px;
 }
@@ -43,53 +37,31 @@
 							</div>
 						</div>
 						<div class="row tm-edit-product-row">
+						
 							<div class="col-xl-12 col-lg-12 col-md-12">
-								<form action="insert" method="post" class="tm-edit-product-form">
+								<form action="insert" method="post" class="tm-edit-product-form">		
 									<div class="form-group mb-3">
 										<label for="name">基地名称 </label> <input id="name" name="aname"
 											type="text" class="form-control validate" required />
 									</div>
-									<div hidden id="show_ry" class="form-group mb-3">
-										<label for="">已选人员</label>
-										<div class="form-group col-lg-12">
-											<table class="table" id="show_ry_table">
-												<tr>
-													<th>名字</th>
-													<th></th>
-												</tr>
-											</table>
-										</div>
-									</div>
+									
 									<div class="form-group col-lg-12">
 										<label for="expire_date">基地位置</label> <input id="expire_date"
 											name="pistion" type="text" class="form-control validate"
 											data-large-mode="true" />
 									</div>
-									<!-- <div hidden id="show_xm" class="form-group mb-3">
-										<h5 style="color: white;">已选项目</h5>
-										<table class="table" id="show_xm_table">
-											<tr>
-												<th>项目名称</th>
-												<th></th>
-											</tr>
-										</table>
-									</div> -->
 								
 							</div>
-
 							<div class="col-12" style="margin-top: 20px;">
 								<button type="submit"
 									class="btn btn-primary btn-block text-uppercase">新增基地</button>
 							</div>
-
+							</form>
 						</div>
-						</form>
 					</div>
 				</div>
-
 			</div>
-			<!-- <div id="ry_jia_div"> -->
-				<div id="ry_tc"
+			<div id="ry_tc"
 					style="width: 358px; height: 208px; border: 1px solid #466675; background: white; filter: alpha(opacity : 80); opacity: 0.9; -moz-opacity: 0.2; -khtml-opacity: 0.5; position: relative; bottom: 320px; left: 570px; overflow-y: scroll; overflow-x: scroll; display: none;">
 					<div class="" id="ty_tc_top"
 						style="background: #466675; text-align: center;">
@@ -122,11 +94,9 @@
 							style="width: 50px; height: 20px; text-align: center; margin-top: 20px; border-radius: 30px 30px 30px 30px; height: 30px; width: 80px;"
 							onclick="hidden_ry(this)" />
 					</div>
-				</div>
+			</div>
 			</div>
 		</div>
-	</div>
-
 </body>
 	<script th:src="@{/js/jquery-3.3.1.min.js}"></script>
 	<script th:src="@{/jquery-ui-datepicker/jquery-ui.min.js}"></script>
