--- a/src/main/resources/templates/pagehome.html
+++ b/src/main/resources/templates/pagehome.html
@@ -7,12 +7,10 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
 		<link rel="icon" th:href="@{/img1/favicon/favicon.html}" type="image/x-icon" />
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" th:href="@{/img1/favicon/apple-touch-icon-144x144-precomposed.html}">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/img1/favicon/apple-touch-icon-72x72-precomposed.html}">
 		<link rel="apple-touch-icon-precomposed" th:href="@{/img1/favicon/apple-touch-icon-precomposed.html}">
-
 		<link rel="stylesheet" th:href="@{/css1/minified.css}">
 		<script th:src="@{/js1/modernizr.min.js}"></script>
 		<link rel="stylesheet" th:href="@{/css1/owl.carousel.css}">
@@ -104,7 +102,7 @@
 													<span class="pull-right total">￥ 0</span>
 												</div>
 												<div class="text-right">
-													<a href="cart.html" class="btn btn-default btn-round view-cart">查看</a>
+													<a th:href="@{/customer/tocart}" class="btn btn-default btn-round view-cart">查看</a>
 												</div>
 											</div>
 										</div>
