--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -81,7 +81,7 @@
                                 <span class="input-group-addon">
                                     <i class="now-ui-icons users_circle-08"></i>
                                 </span>
-                                <input type="text" name="uname" class="form-control" placeholder="账号名">
+                                <input type="text" name="uname" class="form-control" placeholder="账号名" autocomplete="off" />
                             </div>
                             <div class="input-group form-group-no-border input-lg" style="margin-top: 20px;margin-bottom: 0px;">
                                 <span class="input-group-addon">
