--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -18,182 +18,185 @@
 <body class="products-view">
 			
 <div id="page-wrapper">
-
-		<header id="site-header" role="banner">
-						<div class="header-top">
-							<div class="container">
-								<div class="row">
-									<div class="col-xs-12 col-sm-6 col-md-7">
-										<!-- CONTACT INFO -->
-										<div class="contact-info">
-											<i class="iconfont-headphones round-icon"></i>
-											<strong>+444 (100) 1234</strong>
-											<span>(周一- 周五: 09.00 - 21.00)</span>
-										</div>
-										<!-- // CONTACT INFO -->
-									</div>
-									<div class="col-xs-12 col-sm-6 col-md-5">
-										<ul class="actions unstyled clearfix">
-											<li>
-												<!-- SEARCH BOX -->
-												<div class="search-box">
-													<form action="#" method="post">
-														<div class="input-iconed prepend">
-															<button class="input-icon"><i class="iconfont-search"></i></button>
-															<label for="input-search" class="placeholder">在这里搜索</label>
-															<input type="text" name="q" id="input-search" class="round-input full-width" required />
-														</div>
-													</form>
-												</div>
-												<!-- // SEARCH BOX -->
-											</li>
-											<li data-toggle="sub-header" data-target="#sub-social">
-												<!-- SOCIAL ICONS -->
-												<a href="javascript:void(0);" id="social-icons">
-													<i class="iconfont-share round-icon"></i>
-												</a>
-		
-												<div id="sub-social" class="sub-header">
-													<ul class="social-list unstyled text-center">
-														<li>
-															<a href="#"><i class="iconfont-facebook round-icon"></i></a>
-														</li>
-														<li>
-															<a href="#"><i class="iconfont-twitter round-icon"></i></a>
-														</li>
-														<li>
-															<a href="#"><i class="iconfont-google-plus round-icon"></i></a>
-														</li>
-														<li>
-															<a href="#"><i class="iconfont-pinterest round-icon"></i></a>
-														</li>
-														<li>
-															<a href="#"><i class="iconfont-rss round-icon"></i></a>
-														</li>
-													</ul>
-												</div>
-												<!-- // SOCIAL ICONS -->
-											</li>
-											<li data-toggle="sub-header" data-target="#sub-cart">
-												<!-- SHOPPING CART -->
-												<a href="javascript:void(0);" id="total-cart">
-													<i class="iconfont-shopping-cart round-icon"></i>
-												</a>
-		
-												<div id="sub-cart" class="sub-header">
-													<div class="cart-header">
-														<span>你的购物车是空的</span>
-														<small><a href="cart.html">(See All)</a></small>
-													</div>
-													<ul class="cart-items product-medialist unstyled clearfix"></ul>
-													<div class="cart-footer">
-														<div class="cart-total clearfix">
-															<span class="pull-left uppercase">总计</span>
-															<span class="pull-right total">￥ 0</span>
-														</div>
-														<div class="text-right">
-															<a href="cart.html" class="btn btn-default btn-round view-cart">查看</a>
-														</div>
-													</div>
-												</div>
-												<!-- // SHOPPING CART -->
-											</li>
-										</ul>
-									</div>
+			<!--头部  -->
+			<header id="site-header" role="banner">
+				<!-- HEADER TOP -->
+				<div class="header-top">
+					<div class="container">
+						<div class="row">
+							<div class="col-xs-12 col-sm-6 col-md-7">
+								<!-- CONTACT INFO -->
+								<div class="contact-info">
+									<i class="iconfont-headphones round-icon"></i>
+									<strong>+444 (100) 1234</strong>
+									<span>(周一- 周五: 09.00 - 21.00)</span>
 								</div>
+								<!-- // CONTACT INFO -->
 							</div>
-		
-							<!-- ADD TO CART MESSAGE -->
-							<div class="cart-notification">
-								<ul class="unstyled"></ul>
-							</div>
-							<!-- // ADD TO CART MESSAGE -->
-						</div>
-						<div class="main-header-wrapper">
-							<div class="container">
-								<div class="main-header">
-									<!-- CURRENCY / LANGUAGE / USER MENU -->
-									<div class="actions">
-										<div class="center-xs">
-											<!-- CURRENCY -->
-											<ul class="option-list unstyled">
-												<li class="active">
-													<a href="#" data-toggle="tooltip" title="人民币">￥</a>
-												</li>
-												<li>
-													<a href="#" data-toggle="tooltip" title="GBP - British Pound">£</a>
-												</li>
-												<li>
-													<a href="#" data-toggle="tooltip" title="EUR - Euro">€</a>
-												</li>
-											</ul>
-											<!-- // CURRENCY -->
-											<!-- LANGUAGES -->
-											<ul class="option-list unstyled">
-												<li class="active">
-													<a href="#" data-toggle="tooltip" title="中文">CH</a>
-												</li>
-												<li>
-													<a href="#" data-toggle="tooltip" title="French">FR</a>
-												</li>
-												<li>
-													<a href="#" data-toggle="tooltip" title="Deutsch">DE</a>
-												</li>
-											</ul>
-											<!-- // LANGUAGES -->
+							<div class="col-xs-12 col-sm-6 col-md-5">
+								<ul class="actions unstyled clearfix">
+									<li>
+										<!-- SEARCH BOX -->
+										<div class="search-box">
+											<form action="#" method="post">
+												<div class="input-iconed prepend">
+													<button class="input-icon"><i class="iconfont-search"></i></button>
+													<label for="input-search" class="placeholder">在这里搜索</label>
+													<input type="text" name="q" id="input-search" class="round-input full-width" required />
+												</div>
+											</form>
 										</div>
-										<div class="clearfix"></div>
-										<!-- USER RELATED MENU -->
-										<nav id="tiny-menu" class="clearfix">
-											<ul class="user-menu">
-												<li>
-													<a th:href="@{/customer/toPerson}">我的账户</a>
-												</li>
-												<li>
-													<a th:href="@{/customer/toPerson}">查看</a>
-												</li>
-												<li>
-													<a th:href="@{/Login/back}">登出</a>
-												</li>
-											</ul>
-										</nav>
-										<!-- // USER RELATED MENU -->
-									</div>
-									<!-- // CURRENCY / LANGUAGE / USER MENU -->
-									<!-- SITE LOGO -->
-									<div class="logo-wrapper">
-										<a href="index-2.html" class="logo" title="GFashion - Responsive e-commerce HTML Template">
-											<img th:src="@{/images/logo2.png}" alt="Logo" />
+										<!-- // SEARCH BOX -->
+									</li>
+									<li data-toggle="sub-header" data-target="#sub-social">
+										<!-- SOCIAL ICONS -->
+										<a href="javascript:void(0);" id="social-icons">
+											<i class="iconfont-share round-icon"></i>
 										</a>
-									</div>
-									<!-- // SITE LOGO -->
-									<!-- SITE NAVIGATION MENU -->
-									<nav id="site-menu" role="navigation">
-										<ul class="main-menu hidden-sm hidden-xs">
-											<li class="active">
-												<a th:href="@{/customer/topagehome}">首页</a>
-											</li>
-											<li>
-												<a th:href="@{/xjb_projectController/query_Qt}">项目活动</a>
-											</li>
-											<li>
-												<a th:href="@{/menu/toquerymenu1}">餐饮</a>
-											</li>
-											<li>
-												<a th:href="@{/room/toqueryqtroom}">住宿</a>
-											</li>
-		
-											<li>
-												<a th:href="@{/customer/toPerson}">个人中心</a>
-											</li>
-										</ul>
-									</nav>
-									<!-- // SITE NAVIGATION MENU -->
-								</div>
+
+										<div id="sub-social" class="sub-header">
+											<ul class="social-list unstyled text-center">
+												<li>
+													<a href="#"><i class="iconfont-facebook round-icon"></i></a>
+												</li>
+												<li>
+													<a href="#"><i class="iconfont-twitter round-icon"></i></a>
+												</li>
+												<li>
+													<a href="#"><i class="iconfont-google-plus round-icon"></i></a>
+												</li>
+												<li>
+													<a href="#"><i class="iconfont-pinterest round-icon"></i></a>
+												</li>
+												<li>
+													<a href="#"><i class="iconfont-rss round-icon"></i></a>
+												</li>
+											</ul>
+										</div>
+										<!-- // SOCIAL ICONS -->
+									</li>
+									<li data-toggle="sub-header" data-target="#sub-cart">
+										<!-- SHOPPING CART -->
+										<a href="javascript:void(0);" id="total-cart">
+											<i class="iconfont-shopping-cart round-icon"></i>
+										</a>
+
+										<div id="sub-cart" class="sub-header">
+											<div class="cart-header">
+												<span>你的购物车是空的</span>
+												<small><a href="cart.html">(See All)</a></small>
+											</div>
+											<ul class="cart-items product-medialist unstyled clearfix"></ul>
+											<div class="cart-footer">
+												<div class="cart-total clearfix">
+													<span class="pull-left uppercase">总计</span>
+													<span class="pull-right total">￥ 0</span>
+												</div>
+												<div class="text-right">
+													<a th:href="@{/customer/tocart}" class="btn btn-default btn-round view-cart">查看</a>
+												</div>
+											</div>
+										</div>
+										<!-- // SHOPPING CART -->
+									</li>
+								</ul>
 							</div>
 						</div>
-						<!-- // MAIN HEADER -->
-					</header>
+					</div>
+
+					<!-- ADD TO CART MESSAGE -->
+					<div class="cart-notification">
+						<ul class="unstyled"></ul>
+					</div>
+					<!-- // ADD TO CART MESSAGE -->
+				</div>
+				<!-- // HEADER TOP -->
+				<!-- MAIN HEADER -->
+				<div class="main-header-wrapper">
+					<div class="container">
+						<div class="main-header">
+							<!-- CURRENCY / LANGUAGE / USER MENU -->
+							<div class="actions">
+								<div class="center-xs">
+									<!-- CURRENCY -->
+									<ul class="option-list unstyled">
+										<li class="active">
+											<a href="#" data-toggle="tooltip" title="人民币">￥</a>
+										</li>
+										<li>
+											<a href="#" data-toggle="tooltip" title="GBP - British Pound">£</a>
+										</li>
+										<li>
+											<a href="#" data-toggle="tooltip" title="EUR - Euro">€</a>
+										</li>
+									</ul>
+									<!-- // CURRENCY -->
+									<!-- LANGUAGES -->
+									<ul class="option-list unstyled">
+										<li class="active">
+											<a href="#" data-toggle="tooltip" title="中文">CH</a>
+										</li>
+										<li>
+											<a href="#" data-toggle="tooltip" title="French">FR</a>
+										</li>
+										<li>
+											<a href="#" data-toggle="tooltip" title="Deutsch">DE</a>
+										</li>
+									</ul>
+									<!-- // LANGUAGES -->
+								</div>
+								<div class="clearfix"></div>
+								<!-- USER RELATED MENU -->
+								<nav id="tiny-menu" class="clearfix">
+									<ul class="user-menu">
+										<li>
+											<a th:href="@{/customer/toPerson}">我的账户</a>
+										</li>
+										<li>
+											<a th:href="@{/customer/toPerson}">查看</a>
+										</li>
+										<li>
+											<a th:href="@{/Login/back}">登出</a>
+										</li>
+									</ul>
+								</nav>
+								<!-- // USER RELATED MENU -->
+							</div>
+							<!-- // CURRENCY / LANGUAGE / USER MENU -->
+							<!-- SITE LOGO -->
+							<div class="logo-wrapper">
+								<a href="index-2.html" class="logo" title="GFashion - Responsive e-commerce HTML Template">
+									<img th:src="@{/images/logo2.png}" alt="Logo" />
+								</a>
+							</div>
+							<!-- // SITE LOGO -->
+							<!-- SITE NAVIGATION MENU -->
+							<nav id="site-menu" role="navigation">
+								<ul class="main-menu hidden-sm hidden-xs">
+									<li class="active">
+										<a th:href="@{/customer/topagehome}">首页</a>
+									</li>
+									<li>
+										<a th:href="@{/xjb_projectController/query_Qt}">项目活动</a>
+									</li>
+									<li>
+										<a th:href="@{/menu/toquerymenu1}">餐饮</a>
+									</li>
+									<li>
+										<a th:href="@{/room/toqueryqtroom}">住宿</a>
+									</li>
+
+									<li>
+										<a th:href="@{/customer/toPerson}">个人中心</a>
+									</li>
+								</ul>
+							</nav>
+							<!-- // SITE NAVIGATION MENU -->
+						</div>
+					</div>
+				</div>
+				<!-- // MAIN HEADER -->
+			</header>
 		
 		<div class="breadcrumb-container">
 			<div class="container">
@@ -283,7 +286,7 @@
 										<div class="entry-media">
 											<img th:data-src="${item.ilist[0].url}" alt=""  style="height:250px;" class="lazyLoad thumb"/>
 											<div class="hover">
-												<a href="product.html" class="entry-url"></a>
+												<a th:href="@{/xjb_projectController/queryBy_Qt_Xq(id=${item.id})}" class="entry-url"></a>
 												<ul class="icons unstyled">
 													<li>
 														<div class="circle ribbon ribbon-sale">Sale</div>
@@ -303,19 +306,15 @@
 										</div>
 										<div class="entry-main">
 											<h5 class="entry-title">
-												<a href="product.html">Inceptos orci hac libero</a>
+												<a th:href="@{/xjb_projectController/queryBy_Qt_Xq(id=${item.id})}" th:text="${item.pname}"></a>
 											</h5>
 											<div class="entry-description visible-list">
 												<p>Sed ornare cras donec litora integer curabitur orci, at nullam aliquam libero nam himenaeos, amet massa amet ut ipsum viverra mauris rhoncus neque aenean rhoncus gravida orci facilisis quis dui consectetur.</p>
 											</div>
 											<div class="entry-price">
-												<s class="entry-discount">$ 350.00</s>
+												<s class="entry-discount" th:text="'￥'+${item.price}"></s>
 												<strong class="accent-color price">$ 250.00</strong>
-												<a href="#" class="btn btn-round btn-default add-to-cart visible-list">Add to Cart</a>
-											</div>
-											<div class="entry-links clearfix">
-												<a href="#" class="pull-left m-r">+ Add to Wishlist</a>
-												<a href="#" class="pull-right">+ Add to Compare</a>
+												<!-- <a href="#" class="btn btn-round btn-default add-to-cart visible-list">Add to Cart</a> -->
 											</div>
 										</div>
 									</div>
